Fixing the skills-list as it spanned larger than the viewport on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -225,7 +225,10 @@ section {
 .skills-list {
   margin-top: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(2, minmax(120px, 1fr));
+  grid-auto-flow: column;
+  /* grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); */
+
   list-style: none;
   gap: 40px;
 }
